@@ -42,6 +42,13 @@ import er.extensions.eof.ERXEOControlUtilities;
  */
 
 public class ERXFakeRelationship extends WOComponent {
+	/**
+	 * Do I need to update serialVersionUID?
+	 * See section 5.6 <cite>Type Changes Affecting Serialization</cite> on page 51 of the 
+	 * <a href="http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf">Java Object Serialization Spec</a>
+	 */
+	private static final long serialVersionUID = 1L;
+
     private static final Logger log = Logger.getLogger(ERXFakeRelationship.class.getName());
 
     // temps for our children
@@ -151,7 +158,7 @@ public class ERXFakeRelationship extends WOComponent {
 	    try {
 		if(s.length() > 0) {
 		    if(!hasStringPk)  {
-			pkValue = new Integer(Integer.parseInt(s));
+			pkValue = Integer.valueOf(s);
 		    } else {
 			pkValue = s;
 		    }
