@@ -23,6 +23,13 @@ import er.extensions.eof.ERXConstant;
  */
 
 public class ERXLongResponse extends ERXNonSynchronizingComponent {
+	/**
+	 * Do I need to update serialVersionUID?
+	 * See section 5.6 <cite>Type Changes Affecting Serialization</cite> on page 51 of the 
+	 * <a href="http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf">Java Object Serialization Spec</a>
+	 */
+	private static final long serialVersionUID = 1L;
+
     static String WOMetaRefreshSenderId = "WOMetaRefresh";
 
     /** logging support */
@@ -62,7 +69,7 @@ public class ERXLongResponse extends ERXNonSynchronizingComponent {
     	return _refreshInterval.intValue();
     }
     public void setRefreshInterval(int value) {
-    	_refreshInterval = new Integer(value);
+    	_refreshInterval = Integer.valueOf(value);
     }
     
     public WOComponent refresh() {
