@@ -450,7 +450,7 @@ public class DRReportModel extends Object  {
 
         }
 
-        Number dpthKey = new Integer(_attributeListDepth);
+        Number dpthKey = Integer.valueOf(_attributeListDepth);
         //OWDebug.println(1, "dpthKey:"+dpthKey);
         NSMutableArray lst = (NSMutableArray)_flatAttributeDepthDict.objectForKey(dpthKey);
 
@@ -489,7 +489,7 @@ public class DRReportModel extends Object  {
         int cnt = depthKeys.count();
 
         for (i = 0; i < cnt; i++) {
-            Number ky = new Integer(i);
+            Number ky = Integer.valueOf(i);
             //OWDebug.println(1, "ky:"+ ky);
             NSArray attsForDepth = (NSArray)_flatAttributeDepthDict.objectForKey(ky);
             Enumeration anEnum = attsForDepth.objectEnumerator();
